AC_PREREQ([2.69])
AC_INIT([hw-a], [1.0], [https://github.com/openbmc/openbmc/phosphor-snmp.git])
AC_LANG([C])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP

# Create configured output
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
